# steering

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt  server.py  start.sh  steer.py
scripts/: backend_smoke.sh  check.sh  cli_interface_agent_loop.sh  cli_interface_agent_progress.sh
steering/: __init__.py  cli.py  feature_cache.py  local_client.py  neuronpedia_client.py  ollama_client.py  prompt.py  state.py  tlens_backend.py  tui.py
tests/: test_cli.py  test_feature_cache.py  test_local_client.py  test_neuronpedia_client.py  test_packaging.py  test_prompt.py  test_server.py  test_state.py  test_tlens_backend.py  test_tui.py
